<resources>
    <string name="web_client_id" translatable="false">368501999338-d7to8bnbha5v4iordgk1jkokfui23ftm.apps.googleusercontent.com</string>
    <string name="app_name">NoteLocker</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="use_biometric">Use biometry</string>
    <string name="submit">Submit</string>
    <string name="log_in_text">Log in</string>
    <string name="enter_new_note">Write something…</string>
    <string name="save_note">Save</string>
    <string name="delete_message">Delete</string>
    <string name="logout">Log out</string>
    <string name="no_messages">Nothing here…</string>
    <string name="set_password">Set password</string>
    <string name="change_password">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="create">Write</string>
    <string name="edit_note">Edit</string>
    <string name="see_notes">Your notes</string>
    <string name="go_back">Back</string>
    <string name="adjust">Adjust</string>
    <string name="confirm_new_password">Repeat new password</string>
    <string name="choose_language">Change language</string>
    <string name="apply">Apply</string>
    <string name="delete_note_dialog_text">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_note_dialog_tittle">Note removal</string>
    <string name="save_note_failure">Failed to save note</string>
    <string name="note_updated">Note saved!</string>
    <string name="note_deleted">Note deleted!</string>
    <string name="delete_note_failure">Error occurred while deleting the note</string>
    <string name="note_added">New note added!</string>
    <string name="add_note_failure">Error occurred while adding the note</string>
    <string name="reset_dialog_tittle">Reset</string>
    <string name="reset_dialog_text">Password reset. All notes have been lost permanently!</string>
    <string name="wrong_password">Wrong password! Attempts left: %1$d.</string>
    <string name="try_again">Try again!</string>
    <string name="logged_in">Logged in!</string>
    <string name="biometric_prompt">To log in, tap the fingerprint sensor</string>
    <string name="error">Error</string>
    <string name="logged_out">Logged out!</string>
    <string name="language_changed">Zmieniono język na %1$s</string>
    <string name="not_equal_passwords">Passwords do not match!</string>
    <string name="password_set">Password is set</string>
    <string name="set_password_failure">Error occurred while setting password</string>
    <string name="password_changed">New password is set</string>
    <string name="authentication_error">Authentication error</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="account">Account</string>
    <string name="sign_up_info">Log in to your Google account</string>
    <string name="user">user</string>
    <string name="welcome_user">Welcome, %1$s</string>
    <string name="sign_out">Sign out</string>
    <string name="import_notes">Import</string>
    <string name="export_notes">Export</string>
    <string name="profile_picture" translatable="false">profile_picture</string>
    <string name="authentication_settings">Security and privacy</string>
    <string name="error_decrypting_note">Cannot decrypt the note!</string>
    <string name="language_already_set">The selected language is already in use.</string>
    <string name="enable_biometric_authentication">Enable fingerprint authentication</string>
    <string name="key_invalidated">Biometric key has been invalidated. Enter your password to regenerate it.</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send feedback</string>
    <string-array name="language_names">
        <item>English</item>
        <item>Polski</item>
    </string-array>
    <string-array name="language_codes">
        <item>en</item>
        <item>pl</item>
    </string-array>
</resources>