<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:fitsSystemWindows="true">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_new_password"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/md_theme_onSurface"
        android:textColorHint="@color/md_theme_onSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginBottom="16dp"
        android:hint="@string/confirm_new_password"
        android:textColor="@color/md_theme_onSurface"
        android:textColorHint="@color/md_theme_onSurface">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatSetPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/setPasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_password" />
</LinearLayout>