<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/profile_layer"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/ic_account"
            app:layout_constraintBottom_toTopOf="@id/account_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/welcome_user"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/profile_picture" />

        <TextView
            android:id="@+id/account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/welcome_user"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3">

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btnImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_notes"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_notes"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>