<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/primary_layer"
    android:padding="12dp"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/account_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="@color/md_theme_onSurface"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/lineView1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/separator_color"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/account_text"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logged_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/secondary_layer_ripple"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/lineView1"
        android:visibility="gone">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/ic_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/account_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:gravity="center"
            android:maxLines="3"
            android:minLines="3"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logged_out_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/secondary_layer_ripple"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/lineView1"
        android:visibility="visible">

        <TextView
            android:id="@+id/account_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_info"
            android:maxLines="3"
            android:minLines="3"
            android:gravity="center"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>