<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/primary_layer"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logged_in_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/secondary_layer_ripple"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/account_text"
            android:visibility="gone">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/ic_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/account_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user"
                android:gravity="center"
                android:maxLines="3"
                android:minLines="3"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logged_out_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/secondary_layer_ripple"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/account_text"
            android:visibility="visible">

            <TextView
                android:id="@+id/account_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_info"
                android:maxLines="3"
                android:minLines="3"
                android:gravity="center"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/primary_layer"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/account_layout">

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authentication_settings"
            android:textSize="21sp"
            android:gravity="center"
            android:textColor="@color/md_theme_onSurface"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text_view"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/primary_layer"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/password_layout">

        <TextView
            android:id="@+id/language_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_language"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="21sp"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/language_spinner_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/secondary_layer_variant"
            app:layout_constraintTop_toBottomOf="@id/language_text">

            <Spinner
                android:id="@+id/language_spinner"
                style="@style/CustomSpinnerStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:entries="@array/language_names"
                android:gravity="center"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/apply_language_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/apply"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>