<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/password_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@drawable/primary_layer"
    android:padding="12dp"
    app:layout_constraintTop_toBottomOf="@id/account_layout">

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authentication_settings"
        android:textSize="21sp"
        android:gravity="center"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/password_text_view"/>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/change_password"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        app:dividerInsetStart="16dp"
        app:dividerInsetEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/changePasswordButton"/>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/biometric_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="8dp"
        android:text="@string/enable_biometric_authentication"
        android:textSize="15sp"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>